...
      content: "There is no data available for this section.",
      button: "Try again",
    },
  },
  login: {
    signIn: "Sign In",
    email: "Email Address",
    password: "Password",
    invalidCredentials: "Invalid email or password",
    errorConnectingToDB: "Error connecting to the database",
    qrCodeRegister: "Register App with QR Code",
    invalidQRMessage: "Please register the app with a valid QR Code",
    requiredCameraPermissions: "Camera permission is required to scan the QR code.",
    qrCodeRegistered: "APP registration completed",
...
    notesDescription: "Notes on the patient",
    covid19Screening: "COVID-19 Screening",
    covid19ScreeningDescription: "COVID-19 screening questionnaire",
    addEvent: "Add Event",
    setNewAppointment: "Set New Appointment",
  },
  patientList: {
    patients: "Patients",
    search: "Search",
    nameSearch: "Name Search",
    showSearchOptions: "Show Options",
    hideSearchOptions: "Hide Options",
    clear: "Clear",
    managePatient: "Manage Patient",
    deletePatientQuestion: "Delete Patient?",
    confirmDeletePatient: "Are you sure you want to delete this patient?",
    newPatient: "New Patient",
    updatePatient: "Update Patient",
  },
  patientView: {
    newVisit: "New Visit",
  },
  newVisit: {
...
  },
  drawer: {
    patientsList: "Patients List",
    patients: "Patients",
    appointments: "Appointments",
    pharmacy: "Pharmacy",
    settings: "Settings",
    privacyPolicy: "Privacy Policy",
    summaryStats: "Summary Stats",
    benchmarking: "Benchmarking",
    sync: "Sync",
    signOut: "Sign Out",
    restartTitle: "Restart",
    restartDescription:
      "Restarting the app will re-open the app and could help resolve any issues you may be experiencing.",
  },
  eventList: {
    visitEvents: "Visit Events",
...
    eventDeleted: "Event Deleted",
    errorDeletingEvent: "Error deleting event",
    completeVisit: "Complete Visit",
  },
  settingsScreen: {
    settings: "Settings",
    userAccount: "User Account",
    nonprofitDisclaimer:
      "Hikma Health is an independent 501(c)(3) nonprofit and is not affiliated with Hikma Pharmaceuticals PLC or any of its affiliates.",
    showNotifications: "Show Notifications",
    lockWhenIdle: "Lock Screen when idle",
    lockScreen: "Lock Screen",
    requestPin: "Enter a 4-digit PIN",
...
    done: "Done",
    error: "Error",
    languageCode: "en",
    male: "male",
    female: "female",
    signOut: "Sign Out",
    confirmSignOut: "Confirm Sign Out",
    patients: "Patients",
    PATIENTS: "< PATIENTS",
    welcome: "Welcome Back",
    dob: "Date of Birth",
    DOB: "DOB",
    sex: "Sex",
...
    logOut: "Log Out",
    sync: "Sync",
    loading: "Loading",
    results: "Results",
    healthcareProvider: "Provider",
    delete: "Delete",
    showing: "Showing",
    height: "Height",
    weight: "Weight",
    clinic: "Clinic",
    email: "Email",
    clinicName: "Clinic Name",
    learnMore: "Learn more",
...
