...
    const sexLabel = useMemo(() => translate("common:sex"), [])

    const viewDirection = useMemo(() => (isRTL ? "row-reverse" : "row"), [isRTL])

    return (
      <Pressable
        testID={`patientListItem:${patient.id}`}
        onPress={handlePress}
        style={$styles}
        onLongPress={handleLongPress}
      >
        <View gap={20} direction={viewDirection}>
          <AvatarMemo patient={patient} />
...
