const en = {
  "login": {
    "signIn": "Sign In",
    "email": "Email Address",
    "password": "Password"
  },
  "patientFile": {
    "patientView": "Patient View",
    "visitHistory": "Visit History",
    "visitHistoryDescription": "Patient's recent visits with a healthcare provider",
    "medicalHistory": "Medical History",
    "medicalHistoryDescription": "Patient's medical history",
    "complaint": "Complaint",
    "complaintDescription": "Patient complaint or medical concern",
    "examination": "Examination",
    "examinationDescription": "Physical examinations performed over the past visits",
    "medicine": "Medicine",
    "medicineDescription": "Medicine prescribed to the patient"
  },
  "newVisitScreen": {
    "medicalHistory": "Medical History",
    "medicalHistoryDescription": "Patient's medical history",
    "complaint": "Complaint",
    "complaintDescription": "Patient complaint or medical concern",
    "vitals": "Vitals",
    "vitalsDescription": "Vitals taken during the visit",
    "examination": "Examination",
    "examinationDescription": "Perform an examination on the patient",
    "medicineDispensed": "Medicine Dispensed",
    "medicineDispensedDescription": "Medicine prescribed to the patient",
    "physiotherapy": "Physiotherapy",
    "physiotherapyDescription": "Physiotherapy treatment given to the patient",
    "dentalTreatment": "Dental Treatment",
    "dentalTreatmentDescription": "Dental treatment given to the patient",
    "notes": "Notes",
    "notesDescription": "Notes on the patient",
    "covid19Screening": "COVID-19 Screening",
    "covid19ScreeningDescription": "COVID-19 screening questionnaire"
  },
  "patientList": {
    "patients": "Patients",
    "search": "Search",
    "clear": "Clear",
    "newPatient": "New Patient",
    "yearOfBirth": "Year of Birth"
  },
  "patientView": {
    "newVisit": "New Visit"
  },
  "newVisit": {
    "newVisit": "New Visit"
  },
  "newPatient": {
    "newPatient": "New Patient"
  },
  "summaryStats": {
    "summaryStats": "Summary Stats",
    "ageSexBreakdown": "Age & Sex Breakdown"
  },
  "drawer": {
    "patientsList": "Patients List",
    "summaryStats": "Summary Stats",
    "benchmarking": "Benchmarking",
    "sync": "Sync",
    "signOut": "Sign Out"
  },
  "eventList": {
    "visitEvents": "Visit Events",
    "newEntry": "New Entry",
    "eventOptions": "Event Options",
    "eventOptionsDescription": "What do you want to do?",
    "edit": "edit",
    "delete": "delete",
    "eventDeleted": "Event Deleted",
    "errorDeletingEvent": "Error deleting event"
  },
  "languageCode": "en",
  "male": "male",
  "female": "female",
  "signOut": "Sign Out",
  "patients": "Patients",
  "PATIENTS": "< PATIENTS",
  "welcome": "Welcome Back",
  "dob": "Date of Birth",
  "DOB": "DOB",
  "sex": "Sex",
  "gender": "Gender",
  "GENDER": "GENDER",
  "patientSummary": "Patient Summary",
  "noContent": "No content yet",
  "age": "AGE",
  "edit": "EDIT",
  "back": "< BACK",
  "save": "SAVE",
  "confirm": "CONFIRM",
  "cancel": "CANCEL",
  "yes": "Yes",
  "no": "No",
  "firstName": "First Name",
  "surname": "Surname",
  "country": "Country",
  "hometown": "Hometown",
  "selectDob": "Select DOB",
  "phone": "Phone",
  "patientSearch": "Search patient name...",
  "search": "Search",
  "minAge": "Min Age",
  "maxAge": "Max Age",
  "advancedFilters": "Advanced Filters",
  "hideFilters": "Hide Filters",
  "clearFilters": "Clear All Filters",
  "newEntry": "New Entry",
  "camp": "Camp",
  "vitals": "Vitals",
  "examination": "Examination",
  "notes": "Notes",
  "complaint": "Complaint",
  "treatment": "Treatment",
  "diagnosis": "Diagnosis",
  "medicineDispensed": "Medicine Dispensed",
  "prescriptions": "Prescriptions",
  "allergies": "Allergies",
  "medicalHistory": "Medical History",
  "covidScreening": "COVID-19 Screening",
  "enterTextHere": "Enter text here.",
  "visitDate": "Visit Date",
  "visitHistory": "Visit History",
  "visitEvents": "Visit Events",
  "visitType": "Visit Type",
  "trends": "TRENDS",
  "eventType": "Event Type",
  "datePrescribed": "Date Prescibed",
  "provider": "Provider",
  "severity": "Severity",
  "onsetDate": "Onset Date",
  "departure": "Departure",
  "to": "to",
  "return": "Return",
  "fever": "Fever or Chills?",
  "dryCough": "Dry Cough?",
  "diffBreathing": "Difficulty Breathing?",
  "soreThroat": "Sore Throat or Runny Nose?",
  "nausea": "Nausea, vomiting, or diarrhea?",
  "chestPain": "Chest Pain?",
  "confusion": "New Confusion?",
  "bluish": "Bluish Lips or Face?",
  "fatigue": "Fatigue?",
  "aches": "Aches and Pains?",
  "headache": "Headache?",
  "changeTasteSmell": "Change of Taste or Smell?",
  "diabetes": "Diabetes?",
  "cardioDisease": "Cardiovascular Disease?",
  "pulmonaryDisease": "Pulmonary Disease?",
  "renalDisease": "Renal Disease?",
  "malignancy": "Malignancy?",
  "pregnant": "Pregnant or 2 weeks postpartum?",
  "immunocompromised": "Immunocompromised?",
  "exposureKnown": "Recent contact with individuals with known or suspected COVID-19?",
  "travel": "Recent travel out of the country?",
  "symptomsDate": "Onset Date of first symptoms?",
  "riskFactors": "Risk Factors",
  "hideRiskFactors": "Hide Risk Factors",
  "testIsolate": "Test/Isolate Patient",
  "seekCare": "Seek Emergency Care and Isolate",
  "noAction": "No Action Necessary",
  "syncFailure": "Database Sync Failure!",
  "syncFailureConnection": "Check internet connection",
  "syncFailureSystem": "Contact system administrator",
  "syncSuccess": "Database Sync Success",
  "surgeryHx": "Previous Surgeries",
  "chronicConditions": "Chronic Conditions",
  "currentMedications": "Current Medications",
  "vaccinations": "Vaccinations",
  "generalObservations": "General Observations",
  "covid19": "COVID-19",
  "referral": "Referral to Specialist",
  "medicine": "Medicine",
  "medication": "Medication",
  "type": "Type",
  "tablet": "Tablet",
  "syrup": "Syrup",
  "ampule": "Ampule",
  "suppository": "Suppository",
  "cream": "Cream",
  "drops": "Drops",
  "bottle": "Bottle",
  "spray": "Spray",
  "gel": "Gel",
  "lotion": "Lotion",
  "dosage": "Dosage",
  "days": "Days",
  "dentalTreatment": "Dental Treatment",
  "physiotherapy": "Physiotherapy",
  "previousTreatment": "Previous Physio Treatment",
  "findings": "Examination Findings",
  "treatmentPlan": "Treatment Plan",
  "treatmentSession": "Treatment Session",
  "recommendations": "Recommendations",
  "patientSnapshot": "Patient Snapshot",
  "logOut": "Log Out",
  "sync": "Sync",
  "height": "Height",
  "weight": "Weight",
  "patientReport": {
    "patientMedicalRecord": "Patient Medical Record",
    "PatientInformation": "Patient Information"
  },
  "downloadPatientHistory": "Download Patient History"
}

export default en
export type Translations = typeof en
