...
        <View style={{ flexDirection: "row" }}>
          <View style={{ width: 20, height: 20, backgroundColor: maleColor, marginRight: 5 }} />
          <Text>Male ({countTotalBySex("male", report)})</Text>
        </View>
        <View style={{ flexDirection: "row" }}>
          <View style={{ width: 20, height: 20, backgroundColor: femaleColor, marginRight: 5 }} />
          <Text>Female ({countTotalBySex("female", report)})</Text>
        </View>
      </View>

      {Object.keys(report).map((group) => {
        const ageGroup = report[group]
        return (
...
